# subset-selection-TSP

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: example_results.json
include/: config.hpp  core.hpp  oracle.hpp  problem.hpp  run_cli.hpp  subset_solver.hpp  tour.hpp  tsp_solver.hpp
scripts/: plot_results.py
src/: main.cpp  oracle.cpp  run_cli.cpp  run_cli_common.cpp  run_cli_internal.hpp  run_cli_orchestrate.cpp  run_cli_parse.cpp  run_cli_report.cpp  run_cli_self_test.cpp  subset_highp.cpp  subset_pool.cpp  subset_search.cpp  subset_seed.cpp  subset_smallp.cpp  subset_solver_internal.hpp  tsp_solver.cpp
